<resources>
    <string name="app_name">The Dantes Games</string>
    <string name="seu_nome">Gabriel Ykaro</string>
    <string name="sua_matricula">Matrícula: 20241012000255</string>
    <string name="seu_curso">Análise e Desenvolvimento de Sistemas</string>
    <string name="botao_entrar">Entrar</string>
    <string name="cd_sua_foto">Minha foto de perfil</string>
    <string name="titulo_tela_selecao">Seleção de Apps</string>
    <string name="label_codificador">Codificador de Palavras</string>
    <string name="label_ppt">Pedra, Papel e Tesoura</string>
    <string name="label_codigo_secreto">Jogo do Código Secreto</string>
    <string name="label_randomizador">Randomizador</string>
    <string name="titulo_codificador">Codificador de Palavras</string>
    <string name="hint_mensagem">Digite sua mensagem aqui</string>
    <string name="hint_chave">Chave (ex: 3)</string>
    <string name="botao_codificar">Codificar</string>
    <string name="erro_mensagem_vazia">Por favor, digite uma mensagem.</string>
    <string name="erro_chave_invalida">Por favor, digite uma chave numérica válida.</string>
    <string name="titulo_resultado_codificador">Resultado</string>
    <string name="label_resultado">Resultado:</string>
    <string name="botao_decodificar">Decodificar</string>
    <string name="label_original">Original:</string>
    <string name="titulo_rps">Pedra, Papel e Tesoura</string>
    <string name="placar_inicial">Você 0 x 0 Maquina</string>
    <string name="formato_placar">Você %d x %d Maquina</string>
    <string name="escolha_uma_opcao">Escolha uma opção:</string>
    <string name="resultado_vitoria">Você ganhou! :)</string>
    <string name="resultado_derrota">Você perdeu! :(</string>
    <string name="resultado_empate">Empate! :|</string>
    <string name="cd_imagem_jogador">Imagem da escolha do jogador</string>
    <string name="cd_imagem_ia">Imagem da escolha da IA</string>
    <string name="cd_escolha_pedra">Escolher pedra</string>
    <string name="cd_escolha_papel">Escolher papel</string>
    <string name="cd_escolha_tesoura">Escolher tesoura</string>
    <string name="titulo_resultado_rps">Fim de Jogo!</string>
    <string name="mensagem_vitoria_final">Parabéns, você venceu o jogo!</string>
    <string name="mensagem_derrota_final">Não foi dessa vez. A maquina venceu.</string>
    <string name="placar_final">Placar Final:</string>
    <string name="botao_jogar_novamente">Jogar Novamente</string>
    <string name="botao_voltar_menu">Voltar ao Menu</string>
    <string name="titulo_codigo_secreto">Jogo do Código Secreto</string>
    <string name="hint_tentativa">Digite 4 dígitos</string>
    <string name="botao_tentar">Tentar</string>
    <string name="erro_tentativa_invalida">Por favor, digite 4 dígitos.</string>
    <string name="historico_de_tentativas">Histórico de Tentativas:</string>
    <string name="titulo_sucesso_codigo">Você Conseguiu!</string>
    <string name="mensagem_parabens">Parabéns, você descobriu o código secreto!</string>
    <string name="label_tempo_decorrido">Tempo decorrido:</string>
    <string name="label_numero_tentativas">Número de tentativas:</string>
    <string name="titulo_randomizador">Randomizador</string>
    <string name="hint_nova_categoria">Nome da nova categoria</string>
    <string name="botao_add_categoria">Adicionar Categoria</string>
    <string name="label_categorias">Categorias:</string>
    <string name="botao_sortear">Sortear de Todos os Itens!</string>
    <string name="nenhuma_categoria">Nenhuma categoria cadastrada.</string>
    <string name="nenhum_item">Nenhum item para sortear.</string>
    <string name="resultado_sorteio">O item sorteado é:</string>
    <string name="cd_deletar_categoria">Deletar categoria</string>
    <string name="cd_deletar_item">Deletar item</string>
    <string name="cd_add_item">Adicionar novo item</string>
    <string name="titulo_itens_da_categoria">Itens de %s</string>
    <string name="hint_novo_item">Nome do novo item</string>
    <string name="botao_add_item">Adicionar Item</string>
    <string name="cd_historico_tentativas">Histórico de tentativas do jogo do código secreto</string>
    <string name="cd_lista_de_itens">Lista de itens da categoria</string>
    <string name="cd_lista_de_categorias">Lista de categorias cadastradas</string>
    <string name="label_vs">VS</string>
    <string name="mensagem_secreta_vitoria">Você é um mestre dos códigos!</string>
</resources>