<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="75dp">

        <ImageView
            android:id="@+id/imageViewPerfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter" android:src="@drawable/ykaro"
            android:contentDescription="@string/cd_sua_foto" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewFoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/seu_nome"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewNome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/sua_matricula"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewMatricula"
        android:layout_centerHorizontal="true"
        android:text="@string/seu_curso"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BotaoVermelho"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/botao_entrar" />

</RelativeLayout>