<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CodificadorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:maxWidth="400dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_codificador"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/editTextMensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hint_mensagem"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:autofillHints="text"
            android:textColorHint="?android:attr/textColorSecondary" />

        <EditText
            android:id="@+id/editTextChave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hint_chave"
            android:inputType="number"
            android:layout_marginBottom="24dp"
            android:autofillHints="none"
            android:textColorHint="?android:attr/textColorSecondary" />

        <Button
            android:id="@+id/buttonCodificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BotaoVermelho"
            android:text="@string/botao_codificar"/>
    </LinearLayout>

</RelativeLayout>