<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodigoSecretoActivity">

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextTentativa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_tentativa"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="48dp"
            android:autofillHints="none"
            android:textColorHint="?android:attr/textColorSecondary" />

        <Button
            android:id="@+id/buttonTentar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:minWidth="48dp"
            style="@style/BotaoVermelho"
            android:text="@string/botao_tentar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewLabelHistorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historico_de_tentativas"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTentativas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewLabelHistorico"
        android:layout_above="@id/layoutInput"
        android:padding="16dp"
        android:contentDescription="@string/cd_historico_tentativas"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_tentativa" />

</RelativeLayout>