<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SucessoCodigoActivity">

    <TextView
        android:id="@+id/textViewParabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_parabens"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:id="@+id/textViewNumTentativas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        tools:text="Número de tentativas: 8" />

    <TextView
        android:id="@+id/textViewTempoDecorrido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        tools:text="Tempo decorrido: 15s 345ms" />

    <TextView
        android:id="@+id/textViewMensagemSecreta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mensagem_secreta_vitoria" android:textSize="16sp"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/buttonVoltarMenuSucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/BotaoVermelho" android:text="@string/botao_voltar_menu" />

</LinearLayout>