<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItensActivity">

    <LinearLayout
        android:id="@+id/layoutAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/editTextNovoItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_novo_item"
            android:minHeight="48dp"
            android:inputType="textCapSentences"
            android:autofillHints="text"
            android:textColorHint="?android:attr/textColorSecondary" />

        <ImageButton
            android:id="@+id/buttonAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_add_item"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewItens"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutAddItem"
        android:contentDescription="@string/cd_lista_de_itens"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_valor"/>

</RelativeLayout>