<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".TelaSelecaoActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCodificador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical" tools:ignore="UseCompoundDrawables">
            <ImageView android:src="@drawable/cadeado" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginEnd="16dp" android:contentDescription="@string/label_codificador"/>
            <TextView android:text="@string/label_codificador" android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPPT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical" tools:ignore="UseCompoundDrawables">
            <ImageView android:src="@drawable/pedra_papel_tesoura" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginEnd="16dp" android:contentDescription="@string/label_ppt"/>
            <TextView android:text="@string/label_ppt" android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCodigoSecreto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical" tools:ignore="UseCompoundDrawables">
            <ImageView android:src="@drawable/codigo_secreto" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginEnd="16dp" android:contentDescription="@string/label_codigo_secreto"/>
            <TextView android:text="@string/label_codigo_secreto" android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRandomizador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical" tools:ignore="UseCompoundDrawables">
            <ImageView android:src="@drawable/random" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginEnd="16dp" android:contentDescription="@string/label_randomizador"/>
            <TextView android:text="@string/label_randomizador" android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>